<?xml version="1.0"?>
<package>
  <name>silver_msgs</name>
  <version>0.5.3</version>
  <description>
    ROS Message for the Silver project
  </description>
  <author>Jees Kim</author>
  <maintainer email="jskim@yujinrobot.com">Jees Kim</maintainer>
  <license>Yujin Robot</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
